Fix notification spacing, color and hypertext problems

--- a/src/assets/styles/themes/ix-blue.scss
+++ b/src/assets/styles/themes/ix-blue.scss
@@ -721,7 +721,7 @@ $primary-dark: darken( map-get($md-primary, 500), 8% );
   }
 
   // Fix icon color in notification area
-  .notific-icon {
+  .info-icon {
     @include variable(color, --primary, $primary !important);
   }
 
